- Add show page in product page - Add white space in alat - Fixing error cannot add multiple foto in product edit and add
- Add show page in product page
- Add white space in alat
- Fixing error cannot add multiple foto in product edit and add

--- a/public/css/my-style.scss
+++ b/public/css/my-style.scss
@@ -289,3 +289,21 @@ section#services {
         background-color: #00afcb !important;
     }
 }
+
+ul.list-photo {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    li {
+        width: calc(100%/3.5);
+        margin: 0 10px;
+    }
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
